--- a/OpenGL2/OpenGLTutorialProject1.cbp
+++ b/OpenGL2/OpenGLTutorialProject1.cbp
@@ -41,6 +41,8 @@
 		<Unit filename="Projects/OpenGLTutorialProject/display.cpp" />
 		<Unit filename="Projects/OpenGLTutorialProject/display.h" />
 		<Unit filename="Projects/OpenGLTutorialProject/main.cpp" />
+		<Unit filename="mesh.cpp" />
+		<Unit filename="mesh.h" />
 		<Unit filename="shader.cpp" />
 		<Unit filename="shader.h" />
 		<Extensions>
