--- a/ball trail/COL290_assignment1.cbp
+++ b/ball trail/COL290_assignment1.cbp
@@ -15,6 +15,9 @@
 					<Add option="-g" />
 					<Add directory="./" />
 				</Compiler>
+				<Linker>
+					<Add library="glfw" />
+				</Linker>
 			</Target>
 			<Target title="Release">
 				<Option output="bin/Release/COL290_assignment1" prefix_auto="1" extension_auto="1" />
@@ -41,6 +44,8 @@
 		</Linker>
 		<Unit filename="ball.cpp" />
 		<Unit filename="ball.h" />
+		<Unit filename="box.cpp" />
+		<Unit filename="box.h" />
 		<Unit filename="camera.h" />
 		<Unit filename="display.cpp" />
 		<Unit filename="display.h" />
