--- a/GLUT/.vscode/settings.json
+++ b/GLUT/.vscode/settings.json
@@ -27,7 +27,8 @@
         "system_error": "cpp",
         "type_traits": "cpp",
         "typeinfo": "cpp",
-        "utility": "cpp"
+        "utility": "cpp",
+        "array": "cpp"
     },
     "python.linting.enabled": false
 }
